--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cassandra-store": "~1.0.x",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "es6-module-loader": "^0.17.8",
     "express": "~4.13.1",
     "express-session": "^1.11.3",
     "jade": "~1.11.0",
@@ -27,8 +28,12 @@
     "xml2js": "^0.4.12"
   },
   "devDependencies": {
-    "mocha": "2.3.0",
     "chai": "3.2.0",
+    "grunt": "^0.4.5",
+    "grunt-babel": "^5.0.3",
+    "grunt-contrib-clean": "^0.6.0",
+    "load-grunt-tasks": "^3.3.0",
+    "mocha": "2.3.0",
     "supertest": "^1.1.0"
   }
 }
