NEW: Refactored to use Typescript ES5 instead of ES6 NEW: Refactored to allow multiple authentication methods/user NEW: Fixed and completed mocha testsuite NEW: Added tables for friends support

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+# Ignore npm modules
 node_modules
+
+# Ignore Typescript generated definitions
+**/*.d.ts
+
+# Unignore handmade typescript definitions
+!/typings/**/*.d.ts
