--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "body-parser": "~1.13.2",
     "cassandra-driver": "^2.2.1",
     "cassandra-store": "~1.0.x",
-    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "es6-module-loader": "^0.17.8",
     "express": "~4.13.1",
@@ -33,11 +32,13 @@
   "devDependencies": {
     "chai": "3.2.0",
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
     "grunt-babel": "^5.0.3",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-ts": "^5.0.1",
     "load-grunt-tasks": "^3.3.0",
     "mocha": "2.3.0",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "typescript": "^1.6.2"
   }
 }
