--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "postinstall": "grunt",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha test --recursive"
   },
   "dependencies": {
     "async": "^1.4.2",
