--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "postinstall": "grunt",
     "start": "node ./bin/www",
-    "test": "mocha test --recursive"
+    "test": "mocha test --recursive",
+    "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- test --recursive --ui bdd -R spec -t 5000"
   },
   "dependencies": {
     "async": "^1.4.2",
@@ -36,7 +37,9 @@
     "grunt-babel": "^5.0.3",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-mocha-test": "^0.12.7",
     "grunt-ts": "^5.0.1",
+    "istanbul": "^0.3.22",
     "load-grunt-tasks": "^3.3.0",
     "mocha": "2.3.0",
     "supertest": "^1.1.0",
