--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "~4.13.1",
     "express-session": "^1.11.3",
     "jade": "~1.11.0",
+    "markdown": "^0.5.0",
     "morgan": "~1.6.1",
     "multer": "^1.0.6",
     "passport": "~0.2.x",
@@ -27,7 +28,6 @@
     "passport-linkedin": "0.x.x",
     "passport-twitter": "1.x.x",
     "serve-favicon": "~2.3.0",
-    "showdown": "~0.3.1",
     "to-markdown": "^2.0.0",
     "xml2js": "^0.4.12"
   },
