--- a/package.json
+++ b/package.json
@@ -9,40 +9,40 @@
     "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- test --recursive --ui bdd -R spec -t 5000"
   },
   "dependencies": {
-    "async": "^1.4.2",
-    "babel": "^5.8.23",
-    "body-parser": "~1.13.2",
-    "cassandra-driver": "^2.2.1",
-    "cassandra-store": "~1.0.x",
-    "debug": "~2.2.0",
+    "async": "^2.1.4",
+    "babel": "^6.5.2",
+    "body-parser": "~1.15.2",
+    "cassandra-driver": "^3.1.6",
+    "cassandra-store": "~4.1.x",
+    "debug": "~2.6.0",
     "es6-module-loader": "^0.17.8",
-    "express": "~4.13.1",
+    "express": "~4.14.0",
     "express-session": "^1.11.3",
     "pug": "^2.0.0-beta",
     "markdown": "^0.5.0",
-    "morgan": "~1.6.1",
+    "morgan": "~1.7.0",
     "multer": "^1.0.6",
-    "passport": "~0.2.x",
+    "passport": "~0.3.x",
     "passport-facebook": "2.x.x",
-    "passport-google-oauth": "0.x.x",
-    "passport-linkedin": "0.x.x",
+    "passport-google-oauth": "1.x.x",
+    "passport-linkedin": "1.x.x",
     "passport-twitter": "1.x.x",
     "serve-favicon": "~2.3.0",
-    "to-markdown": "^2.0.0",
+    "to-markdown": "^3.0.3",
     "xml2js": "^0.4.12"
   },
   "devDependencies": {
-    "chai": "3.2.0",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.3",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-ts": "^5.0.1",
-    "istanbul": "^0.3.22",
+    "chai": "3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-babel": "^6.0.0",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-mocha-test": "^0.13.2",
+    "grunt-ts": "^6.0.0-beta.3",
+    "istanbul": "^0.4.5",
     "load-grunt-tasks": "^3.3.0",
-    "mocha": "2.3.0",
-    "supertest": "^1.1.0",
-    "typescript": "^1.6.2"
+    "mocha": "3.2.0",
+    "supertest": "^2.0.1",
+    "typescript": "^2.1.4"
   }
 }
