--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
     "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- test --recursive --ui bdd -R spec -t 5000"
   },
   "dependencies": {
+    "@types/async": "^2.0.37",
+    "@types/cassandra-driver": "^0.8.9",
+    "@types/chai": "^3.4.34",
+    "@types/express": "^4.0.34",
+    "@types/express-session": "0.0.32",
+    "@types/mocha": "^2.2.35",
+    "@types/multer": "0.0.32",
+    "@types/node": "^6.0.55",
+    "@types/passport": "^0.3.1",
+    "@types/websocket": "0.0.32",
+    "@types/xml2js": "0.0.32",
     "async": "^2.1.4",
-    "babel": "^6.5.2",
     "body-parser": "~1.15.2",
     "cassandra-driver": "^3.1.6",
     "cassandra-store": "~4.1.x",
@@ -18,7 +28,6 @@
     "es6-module-loader": "^0.17.8",
     "express": "~4.14.0",
     "express-session": "^1.11.3",
-    "pug": "^2.0.0-beta",
     "markdown": "^0.5.0",
     "morgan": "~1.7.0",
     "multer": "^1.0.6",
@@ -27,11 +36,14 @@
     "passport-google-oauth": "1.x.x",
     "passport-linkedin": "1.x.x",
     "passport-twitter": "1.x.x",
+    "pug": "^2.0.0-beta",
     "serve-favicon": "~2.3.0",
     "to-markdown": "^3.0.3",
+    "websocket": "^1.x.x",
     "xml2js": "^0.4.12"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
     "chai": "3.5.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^6.0.0",
