--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/chai": "^3.4.34",
     "@types/express": "^4.0.34",
     "@types/express-session": "0.0.32",
+    "@types/kafka-node": "^0.2.35",
     "@types/mocha": "^2.2.35",
     "@types/multer": "0.0.32",
     "@types/node": "^6.0.55",
@@ -25,9 +26,9 @@
     "cassandra-driver": "^3.1.6",
     "cassandra-store": "~4.1.x",
     "debug": "~2.6.0",
-    "es6-module-loader": "^0.17.8",
     "express": "~4.14.0",
     "express-session": "^1.11.3",
+    "kafka-node": "^1.0.7",
     "markdown": "^0.5.0",
     "morgan": "~1.7.0",
     "multer": "^1.0.6",
