--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,7 @@ cache:
 
 test_async:
   script:
-   - npm install --quiet --dev
-   - grunt test
+   - npm install --quiet
+   - npm install --quiet -g grunt-cli
+   - ls
+   - npm test
