--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ variables:
 # Check out: http://docs.gitlab.com/ce/ci/docker/using_docker_images.html#what-is-service
 services:
   - cassandra:latest
+  - spotify/kafka:latest
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
@@ -21,5 +22,5 @@ cache:
 test_async:
   script:
    - npm install --quiet
-   - npm install --quiet -g grunt-cli
+   - npm install --quiet -g grunt-cli mocha
    - grunt dev
