--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,5 +22,6 @@ cache:
 test_async:
   script:
    - npm install --quiet
-   - npm install --quiet -g --only-dev
+   - npm install --quiet grunt mocha -g
+   - grunt
    - grunt dev
