--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,5 +22,5 @@ cache:
 test_async:
   script:
    - npm install --quiet
-   - npm install --quiet grunt mocha-cli -g
+   - npm install --quiet grunt -g
    - grunt dev
