--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "serve-favicon": "~2.3.0",
     "to-markdown": "^3.0.3",
     "websocket": "^1.x.x",
-    "xml2js": "^0.4.12"
+    "xml2js": "^0.4.12",
+    "map-editor": "^1.0.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
