--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ cache:
 
 test_async:
   script:
-#   - sed "s/192.168.1.20/cassandra/;s/localhost:2181/spotify__kafka:2181/" -i config/config.json
+   - sed "s/8042/18042/" -i config/config.json
    - sed "s/localhost:2181/spotify__kafka:2181/" -i config/config.json
    - npm install --quiet
    - npm install --quiet grunt -g
