--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ image: node:latest
 
 variables:
   DB_HOST: casssandra
+  KAFKA_HOST: spotify__kafka
 
 # Pick zero or more services to be used on all builds.
 # Only needed when using a docker container to run your tests in.
@@ -21,8 +22,6 @@ cache:
 
 test_async:
   script:
-   - sed "s/9042/19042/" -i config/config.json
-   - sed "s/localhost:2181/spotify__kafka:2181/" -i config/config.json
    - npm install --quiet
    - npm install --quiet grunt -g
    - grunt dev
