--- a/package.json
+++ b/package.json
@@ -3,47 +3,48 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "tsc -p src/",
+    "build:watch": "tsc -p src/ -w",
     "postinstall": "grunt",
     "start": "node ./bin/www",
     "test": "mocha test --recursive",
     "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- test --recursive --ui bdd -R spec -t 5000"
   },
   "dependencies": {
-    "@types/async": "^2.0.37",
-    "@types/cassandra-driver": "^0.8.9",
-    "@types/chai": "^3.4.34",
-    "@types/express": "^4.0.34",
+    "@types/async": "^2.0.38",
+    "@types/cassandra-driver": "^0.8.10",
+    "@types/chai": "^3.4.35",
+    "@types/express": "^4.0.35",
     "@types/express-session": "0.0.32",
-    "@types/kafka-node": "^0.2.35",
-    "@types/mocha": "^2.2.35",
-    "@types/multer": "0.0.32",
-    "@types/node": "^6.0.55",
-    "@types/passport": "^0.3.1",
-    "@types/websocket": "0.0.32",
+    "@types/kafka-node": "^1.3.0",
+    "@types/mocha": "^2.2.39",
+    "@types/multer": "0.0.33",
+    "@types/node": "^7.0.5",
+    "@types/passport": "^0.3.3",
+    "@types/websocket": "0.0.33",
     "@types/xml2js": "0.0.32",
-    "async": "^2.1.4",
-    "body-parser": "~1.15.2",
-    "cassandra-driver": "^3.1.6",
+    "async": "^2.1.5",
+    "body-parser": "~1.17.0",
+    "cassandra-driver": "^3.2.0",
     "cassandra-store": "~4.1.x",
-    "debug": "~2.6.0",
-    "express": "~4.14.0",
-    "express-session": "^1.11.3",
-    "kafka-node": "^1.0.7",
+    "debug": "~2.6.1",
+    "express": "~4.15.0",
+    "express-session": "^1.15.1",
+    "kafka-node": "^1.5.0",
     "markdown": "^0.5.0",
-    "morgan": "~1.7.0",
-    "multer": "^1.0.6",
+    "mindweb-request-classes": "^0.0.10-beta1",
+    "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "passport": "~0.3.x",
     "passport-facebook": "2.x.x",
     "passport-google-oauth": "1.x.x",
     "passport-linkedin": "1.x.x",
     "passport-twitter": "1.x.x",
-    "pug": "^2.0.0-beta",
-    "serve-favicon": "~2.3.0",
+    "pug": "^2.0.0-beta11",
+    "serve-favicon": "~2.4.1",
     "to-markdown": "^3.0.3",
     "websocket": "^1.x.x",
-    "xml2js": "^0.4.12",
-    "mindweb-request-classes": "^0.0.6",
-    "map-editor": "^1.0.0"
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "chai": "3.5.0",
@@ -51,11 +52,11 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-mocha-test": "^0.13.2",
-    "grunt-ts": "^6.0.0-beta.3",
+    "grunt-ts": "^6.0.0-beta.11",
     "istanbul": "^0.4.5",
-    "load-grunt-tasks": "^3.3.0",
+    "load-grunt-tasks": "^3.5.2",
     "mocha": "3.2.0",
-    "supertest": "^2.0.1",
-    "typescript": "^2.2.0"
+    "supertest": "^3.0.0",
+    "typescript": "^2.2.1"
   }
 }
