--- a/package.json
+++ b/package.json
@@ -11,29 +11,27 @@
     "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- test --recursive --ui bdd -R spec -t 5000"
   },
   "dependencies": {
-    "@types/async": "^2.0.38",
+    "@types/async": "^2.0.39",
     "@types/cassandra-driver": "^0.8.10",
-    "@types/chai": "^3.4.35",
     "@types/express": "^4.0.35",
     "@types/express-session": "0.0.32",
-    "@types/kafka-node": "^1.3.0",
-    "@types/mocha": "^2.2.39",
+    "@types/kafka-node": "^1.3.1",
     "@types/multer": "0.0.33",
-    "@types/node": "^7.0.5",
+    "@types/node": "^7.0.8",
     "@types/passport": "^0.3.3",
     "@types/websocket": "0.0.33",
-    "@types/xml2js": "0.0.32",
+    "@types/xml2js": "0.0.33",
     "async": "^2.1.5",
-    "body-parser": "~1.17.0",
+    "body-parser": "~1.17.1",
     "cassandra-driver": "^3.2.0",
     "cassandra-store": "~4.1.x",
-    "debug": "~2.6.1",
-    "express": "~4.15.0",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "express-logger": "0.0.3",
     "express-session": "^1.15.1",
-    "kafka-node": "^1.5.0",
+    "kafka-node": "^1.6.0",
     "markdown": "^0.5.0",
-    "mindweb-request-classes": "^0.0.10-beta1",
-    "morgan": "~1.8.1",
+    "mindweb-request-classes": "^0.0.13-beta0001",
     "multer": "^1.3.0",
     "passport": "~0.3.x",
     "passport-facebook": "2.x.x",
@@ -42,17 +40,19 @@
     "passport-twitter": "1.x.x",
     "pug": "^2.0.0-beta11",
     "serve-favicon": "~2.4.1",
-    "to-markdown": "^3.0.3",
+    "to-markdown": "^3.0.4",
     "websocket": "^1.x.x",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.35",
+    "@types/mocha": "^2.2.40",
     "chai": "3.5.0",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
     "grunt-mocha-test": "^0.13.2",
-    "grunt-ts": "^6.0.0-beta.11",
+    "grunt-ts": "^6.0.0-beta.15",
     "istanbul": "^0.4.5",
     "load-grunt-tasks": "^3.5.2",
     "mocha": "3.2.0",
