--- a/package.json
+++ b/package.json
@@ -11,53 +11,53 @@
     "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- test --recursive --ui bdd -R spec -t 5000"
   },
   "dependencies": {
-    "@types/async": "^2.0.40",
-    "@types/cassandra-driver": "^0.8.10",
-    "@types/express": "^4.0.35",
-    "@types/express-session": "0.0.32",
-    "@types/kafka-node": "^1.3.2",
-    "@types/multer": "0.0.33",
-    "@types/node": "^7.0.13",
-    "@types/passport": "^0.3.3",
-    "@types/websocket": "0.0.33",
-    "@types/xml2js": "0.0.33",
-    "async": "^2.3.0",
-    "body-parser": "~1.17.1",
-    "cassandra-driver": "^3.2.0",
+    "@types/async": "^2.0.44",
+    "@types/cassandra-driver": "^3.2.1",
+    "@types/express": "^4.0.39",
+    "@types/express-session": "^1.15.5",
+    "@types/kafka-node": "^2.0.3",
+    "@types/multer": "^1.3.5",
+    "@types/node": "^8.0.47",
+    "@types/passport": "^0.3.5",
+    "@types/websocket": "0.0.34",
+    "@types/xml2js": "0.4.0",
+    "async": "^2.5.0",
+    "body-parser": "~1.18.2",
+    "cassandra-driver": "^3.3.0",
     "cassandra-store": "~4.1.x",
-    "debug": "~2.6.4",
-    "express": "~4.15.2",
+    "debug": "~3.1.0",
+    "express": "~4.16.2",
     "express-logger": "0.0.3",
-    "express-session": "^1.15.2",
-    "kafka-node": "^1.6.0",
+    "express-session": "^1.15.6",
+    "kafka-node": "^2.2.3",
     "markdown": "^0.5.0",
     "mindweb-request-classes": "^0.0.14-beta0006",
     "multer": "^1.3.0",
-    "passport": "~0.3.x",
+    "passport": "~0.4.x",
     "passport-facebook": "2.x.x",
     "passport-google-oauth": "1.x.x",
     "passport-linkedin": "1.x.x",
     "passport-twitter": "1.x.x",
-    "pug": "^2.0.0-beta11",
-    "rxjs": "5.3.0",
-    "serve-favicon": "~2.4.2",
-    "to-markdown": "^3.0.4",
+    "pug": "^2.0.0-rc.4",
+    "rxjs": "^5.5.2",
+    "serve-favicon": "~2.4.5",
+    "to-markdown": "^3.1.0",
     "websocket": "^1.x.x",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "@types/chai": "^3.5.1",
-    "@types/mocha": "^2.2.41",
-    "chai": "3.5.0",
+    "@types/chai": "^4.0.4",
+    "@types/mocha": "^2.2.44",
+    "chai": "4.1.2",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.1.0",
-    "grunt-mocha-test": "^0.13.2",
-    "grunt-ts": "^6.0.0-beta.15",
+    "grunt-mocha-test": "^0.13.3",
+    "grunt-ts": "^6.0.0-beta.16",
     "istanbul": "^0.4.5",
     "load-grunt-tasks": "^3.5.2",
-    "mocha": "3.2.0",
+    "mocha": "4.0.1",
     "supertest": "^3.0.0",
-    "typescript": "^2.2.2"
+    "typescript": "^2.5.3"
   }
 }
